feat: ability to reserve product
